--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<meta http-equiv="refresh" content="0; url=https://github.com/subhayudutta/ChatFusion/blob/main/templates/index.html">
+<meta http-equiv="refresh" content="0; url="https://ChatFusion.github.io/templates/index.html">
 
